force-app/main/default/objects/User/fields/AD_EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>AD_EmployeeId__c</fullName>
    <description>Employee ID used for financial dimension(Mepco) populated from Azure AD</description>
    <label>EmployeeId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>