force-app/main/default/objects/User/fields/AD_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>AD_Manager_Id__c</fullName>
    <description>Field used by AzureAD to populate MepcoManager Id</description>
    <label>AD Manager Id OLD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>