force-app/main/default/objects/User/fields/AD_ManagerId__c.field-meta.xml
<CustomField>
    <fullName>AD_ManagerId__c</fullName>
    <description>Mananger ID used for financial dimension(Mepco) populated from Azure AD</description>
    <label>AD Manager Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>