force-app/main/default/objects/User/fields/AD_Office__c.field-meta.xml
<CustomField>
    <fullName>AD_Office__c</fullName>
    <description>User head office, with unique identifier coming from Mepco</description>
    <inlineHelpText>User head office, with unique identifier coming from Mepco</inlineHelpText>
    <label>AD Office</label>
    <length>50</length>
    <type>Text</type>
</CustomField>