force-app/main/default/objects/User/fields/AD_OfficeName__c.field-meta.xml
<CustomField>
    <fullName>AD_OfficeName__c</fullName>
    <description>User Office Name populated from Azure AD</description>
    <inlineHelpText>User Office Name populated from Azure AD</inlineHelpText>
    <label>AD Office</label>
    <length>50</length>
    <type>Text</type>
</CustomField>