force-app/main/default/objects/User/fields/AD_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>AD_Profit_Center__c</fullName>
    <label>AD Profit Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_AD_Profit_Center_Codes</valueSetName>
    </valueSet>
</CustomField>