force-app/main/default/objects/User/fields/AD_ProfitCenterCode__c.field-meta.xml
<CustomField>
    <fullName>AD_ProfitCenterCode__c</fullName>
    <description>User Profit Center Code populated from Azure AD</description>
    <inlineHelpText>User Profit Center Code populated from Azure AD</inlineHelpText>
    <label>AD Profit Center Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_AD_Profit_Center_Codes</valueSetName>
    </valueSet>
</CustomField>