force-app/main/default/objects/User/fields/AD_Short_Username__c.field-meta.xml
<CustomField>
    <fullName>AD_Short_Username__c</fullName>
    <description>AD Short Username</description>
    <inlineHelpText>AD Short Username OLD</inlineHelpText>
    <label>AD Short Username</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>