force-app/main/default/objects/User/fields/AD_Username__c.field-meta.xml
<CustomField>
    <fullName>AD_Username__c</fullName>
    <description>Lumon Username populated from Azure AD</description>
    <inlineHelpText>Lumon Username populated from Azure AD</inlineHelpText>
    <label>AD Username</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>