force-app/main/default/objects/User/fields/Additional_Organizations__c.field-meta.xml
<CustomField>
    <fullName>Additional_Organizations__c</fullName>
    <description>Addtional organizations where the user should have access to</description>
    <inlineHelpText>Addtional organizations where the user should have access to</inlineHelpText>
    <label>Additional Organizations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Organizations</valueSetName>
    </valueSet>
</CustomField>