force-app/main/default/objects/User/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Profit_Center_Codes</valueSetName>
    </valueSet>
</CustomField>