force-app/main/default/objects/User/fields/Country_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Country_Attribute__c</fullName>
    <formula>Country</formula>
    <label>Country Attribute OLD</label>
    <type>Text</type>
</CustomField>