force-app/main/default/objects/User/fields/Country_Code_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_Attribute__c</fullName>
    <formula>TEXT(CountryCode)</formula>
    <label>Country Code Attribute OLD</label>
    <type>Text</type>
</CustomField>