force-app/main/default/objects/User/fields/CountryAttribute__c.field-meta.xml
<CustomField>
    <fullName>CountryAttribute__c</fullName>
    <formula>TEXT(CountryCode)</formula>
    <label>Country Attribute</label>
    <type>Text</type>
</CustomField>