force-app/main/default/objects/User/fields/District_Attribute__c.field-meta.xml
<CustomField>
    <fullName>District_Attribute__c</fullName>
    <formula>TEXT(District__c)</formula>
    <label>District Attribute</label>
    <type>Text</type>
</CustomField>