force-app/main/default/objects/User/fields/Mepco_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Mepco_Manager_Id__c</fullName>
    <description>Field used by AzureAD to populate MepcoManager Id</description>
    <label>Mepco Manager Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>