force-app/main/default/objects/User/fields/myLumonPortal_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>myLumonPortal_OrderNumber__c</fullName>
    <label>myLumonPortal_OrderNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>