force-app/main/default/objects/User/fields/OrganizationAttribute__c.field-meta.xml
<CustomField>
    <fullName>OrganizationAttribute__c</fullName>
    <formula>TEXT(Organization__c)</formula>
    <label>Organization Attribute</label>
    <type>Text</type>
</CustomField>