force-app/main/default/objects/User/fields/Profit_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_Code__c</fullName>
    <description>Derive the Profit Center Number from Profit Center String</description>
    <formula>LEFT(Profit_Center_Attribute__c,FIND(Organization_Attribute__c,Profit_Center_Attribute__c,1)-2)</formula>
    <label>Profit Center Code OLD</label>
    <type>Text</type>
</CustomField>