force-app/main/default/objects/User/fields/Profit_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_Name__c</fullName>
    <formula>MID(Profit_Center_Attribute__c,FIND(Organization_Attribute__c,Profit_Center_Attribute__c,1)+4,100)</formula>
    <label>Profit Center Name OLD</label>
    <type>Text</type>
</CustomField>