force-app/main/default/objects/User/fields/ProfitCenterAttribute__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenterAttribute__c</fullName>
    <formula>TEXT(ProfitCenter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Center Attribute</label>
    <type>Text</type>
</CustomField>