force-app/main/default/objects/User/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <formula>Manager.FirstName +  Manager.LastName</formula>
    <label>Supervisor</label>
    <type>Text</type>
</CustomField>