force-app/main/default/objects/User/listViews/All_Users.listView-meta.xml
<ListView>
    <fullName>All_Users</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Organization_Attribute__c</columns>
    <columns>Profit_Center_Attribute__c</columns>
    <columns>District_Attribute__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
    <language>en_US</language>
</ListView>