force-app/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>AD_Profit_Center__c</columns>
    <columns>AD_Short_Username__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>