force-app/main/default/objects/User/listViews/B2B_Sales_Users.listView-meta.xml
<ListView>
    <fullName>B2B_Sales_Users</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Organization_Attribute__c</columns>
    <columns>Profit_Center_Attribute__c</columns>
    <columns>District_Attribute__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>B2B</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Sales</value>
    </filters>
    <label>B2B Sales Users</label>
    <language>en_US</language>
</ListView>