force-app/main/default/objects/User/listViews/B2C_Sales_Users.listView-meta.xml
<ListView>
    <fullName>B2C_Sales_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>B2C</value>
    </filters>
    <label>B2C Sales Users</label>
    <language>en_US</language>
</ListView>