force-app/main/default/objects/User/listViews/FluidoUsers.listView-meta.xml
<ListView>
    <fullName>FluidoUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>contains</operation>
        <value>Fluido</value>
    </filters>
    <label>Fluido Users</label>
</ListView>