force-app/main/default/objects/User/listViews/Installers.listView-meta.xml
<ListView>
    <fullName>Installers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>TIMEZONE</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Lumon Installer</value>
    </filters>
    <label>Installers</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>