force-app/main/default/objects/User/listViews/Integration_Connections.listView-meta.xml
<ListView>
    <fullName>Integration_Connections</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>integr</value>
    </filters>
    <label>Integration Connections</label>
    <language>en_US</language>
</ListView>