force-app/main/default/objects/User/listViews/Internal_Users.listView-meta.xml
<ListView>
    <fullName>Internal_Users</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>lumon</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>visor</value>
    </filters>
    <label>Internal Users</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>