force-app/main/default/objects/User/listViews/Logistics.listView-meta.xml
<ListView>
    <fullName>Logistics</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>AD_Profit_Center__c</columns>
    <columns>AD_Short_Username__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Logist</value>
    </filters>
    <label>Logistics</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>