force-app/main/default/objects/User/listViews/PortalUsers.listView-meta.xml
<ListView>
    <fullName>PortalUsers</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Organization_Attribute__c</columns>
    <columns>Profit_Center_Attribute__c</columns>
    <columns>District_Attribute__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>portal</value>
    </filters>
    <label>Portal Users</label>
    <language>en_US</language>
</ListView>